k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: strafig
  labels:
    app: strafig
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: web
  type: ClusterIP
